--- a/styles/bio.css
+++ b/styles/bio.css
@@ -17,17 +17,21 @@ html, body {
   margin: 0;
   padding: 0;
 }
-@media screen and (min-width: 768px) {
-  html, body {
-    min-width: 768px;
-  }
-}
 
-.header {
-  background: #323232;
-  display: flex;
-  flex-direction: column;
-  position: relative;
+@media screen and (min-width: 320px) {
+  .header {
+    background: #323232;
+    flex-direction: column;
+    position: relative;
+  }
+  .header__logo {
+    background-image: url("../assets/Logo/Logo-bandsite.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    align-items: center;
+    max-height: 20px;
+    padding: 1.5rem;
+  }
 }
 @media screen and (min-width: 768px) {
   .header {
@@ -37,7 +41,10 @@ html, body {
     padding: 2.25rem;
   }
   .header__logo {
-    width: 20%;
+    width: 100%;
+    background-position: left;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -47,16 +54,6 @@ html, body {
     align-items: center;
     padding: 2.25rem;
   }
-}
-.header__logo {
-  background-image: url("../assets/Logo/Logo-bandsite.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  align-items: center;
-  max-height: 20px;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  margin: 0.5rem;
 }
 
 .nav {
@@ -72,44 +69,53 @@ html, body {
     border-bottom: -1.1875rem solid #FFFFFF;
     color: #FFFFFF;
   }
-}
-.nav__link {
-  text-decoration: none;
-  color: #AFAFAF;
-  transition: background-color 0.25s;
-  display: flex;
-  width: 50%;
-  justify-content: space-evenly;
-  transition: all 0.5s;
-}
-@media screen and (min-width: 768px) {
   .nav__link {
+    text-decoration: none;
+    color: #AFAFAF;
+    transition: background-color 0.25s;
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
+    transition: all 0.5s;
+  }
+}
+@media screen and (min-width: 320px) and (min-width: 768px) {
+  .nav {
     font-size: 1.5rem;
   }
 }
-.nav__link:hover {
-  color: #FFFFFF;
+@media screen and (min-width: 320px) {
+  .nav:hover {
+    color: #FFFFFF;
+  }
 }
-.nav__button {
-  padding: 0.625rem;
-  text-decoration: none;
-  color: #AFAFAF;
-  transition: background-color 0.25s;
-  display: flex;
-  width: 50%;
-  justify-content: space-evenly;
-  transition: all 0.5s;
-  background-color: #323232;
-}
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 320px) {
   .nav__button {
-    font-size: 1.5rem;
+    padding: 0.625rem;
+    text-decoration: none;
+    color: #AFAFAF;
+    transition: background-color 0.25s;
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
+    transition: all 0.5s;
+    background-color: #323232;
+    border: none;
   }
 }
-.nav__button:hover {
-  background-color: black;
-  border-bottom: 0.1875rem solid #FFFFFF;
-  color: #FFFFFF;
+@media screen and (min-width: 320px) and (min-width: 768px) {
+  .nav__button {
+    font-size: 0.875rem;
+    line-height: 2rem;
+    font-weight: 600;
+  }
+}
+@media screen and (min-width: 320px) {
+  .nav__button:hover {
+    background-color: black;
+    border-bottom: 0.1875rem solid #FFFFFF;
+    color: #FFFFFF;
+  }
 }
 @media screen and (min-width: 768px) {
   .nav {
@@ -120,51 +126,44 @@ html, body {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    margin-left: 2.25rem;
+    transform: translateX(10rem);
   }
   .nav:hover {
     border-bottom: -1.1875rem solid #FFFFFF;
     color: #FFFFFF;
   }
-}
-.nav__link {
-  text-decoration: none;
-  color: #AFAFAF;
-  transition: background-color 0.25s;
-  display: flex;
-  width: 50%;
-  justify-content: space-evenly;
-  transition: all 0.5s;
-}
-@media screen and (min-width: 768px) {
   .nav__link {
-    font-size: 1.5rem;
+    text-decoration: none;
+    color: #AFAFAF;
+    transition: background-color 0.25s;
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
+    transition: all 0.5s;
+    font-size: 0.75rem;
+    font-weight: 700;
+    line-height: 1.25rem;
   }
-}
-.nav__link:hover {
-  color: #FFFFFF;
-}
-.nav__button {
-  padding: 0.625rem;
-  text-decoration: none;
-  color: #AFAFAF;
-  transition: background-color 0.25s;
-  display: flex;
-  width: 50%;
-  justify-content: space-evenly;
-  transition: all 0.5s;
-  background-color: #323232;
-  align-items: center;
-  border: none;
-}
-@media screen and (min-width: 768px) {
-  .nav {
-    font-size: 1.5rem;
+  .nav:hover {
+    color: #FFFFFF;
   }
-}
-.nav:hover {
-  background-color: black;
-  color: #FFFFFF;
+  .nav__button {
+    padding: 2rem;
+    text-decoration: none;
+    color: #AFAFAF;
+    transition: background-color 0.25s;
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
+    transition: all 0.5s;
+    background-color: #323232;
+    align-items: center;
+    border: none;
+  }
+  .nav__button:hover {
+    background-color: black;
+    color: #FFFFFF;
+  }
 }
 @media screen and (min-width: 1280px) {
   .nav {
@@ -181,18 +180,20 @@ html, body {
   .hero__title {
     color: #FFFFFF;
     position: absolute;
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 400;
+    z-index: 1;
     padding-left: 1rem;
   }
 }
 @media screen and (min-width: 768px) {
-  .hero {
-    min-width: 768px;
-    font-size: 3.75rem;
-    line-height: 4.25rem;
-  }
   .hero__title {
     padding-left: 2.25rem;
-    margin: 0;
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 700;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -203,15 +204,6 @@ html, body {
   .hero__title {
     margin: 0;
   }
-}
-.hero__title {
-  color: #FFFFFF;
-  position: absolute;
-  font-weight: 400;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 700;
-  z-index: 1;
 }
 .hero-img-overlay {
   position: absolute;
@@ -236,8 +228,7 @@ html, body {
 @media screen and (min-width: 320px) {
   .about__header {
     align-items: center;
-    padding-bottom: 1rem;
-    padding-top: 1.5rem;
+    padding-top: 1rem;
   }
   .about-quote__container {
     display: flex;
@@ -273,11 +264,10 @@ html, body {
     padding-bottom: 2.25rem;
   }
   .about__header {
-    padding-top: 3rem;
-    padding-bottom: 2.25rem;
-    font-size: 2.25rem;
     justify-content: flex-start;
-    padding-right: 2.25rem;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 700;
   }
   .about-band {
     max-width: 75%;
@@ -295,24 +285,28 @@ html, body {
     display: flex;
     font-size: 0.875rem;
     line-height: 1.375rem;
+    font-weight: 400;
     flex-direction: row;
   }
   .about-quote__the-bees {
-    font-size: 1.5rem;
-    line-height: 2rem;
     padding-top: 2.25rem;
     padding-bottom: 2.25rem;
     margin: 0;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
   }
   .about-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-right: 2.25rem;
   }
   .about-quote__text {
     margin: 0;
     padding-top: 2.25rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
   }
   .about-quote__container__text {
     padding: 0;
@@ -320,6 +314,11 @@ html, body {
   }
   .about-quote__container__text1 {
     padding: 0;
+  }
+  .about-quote__author {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -378,9 +377,6 @@ html, body {
     padding: 0;
   }
 }
-.about__header {
-  margin: 0;
-}
 .about-quote__author {
   margin: 0;
   padding-top: 1rem;
@@ -395,13 +391,9 @@ html, body {
   margin: 0;
 }
 
-.photo {
-  background: #FAFAFA;
-  padding-right: 1rem;
-  padding-left: 1rem;
-}
 @media screen and (min-width: 320px) {
   .photo {
+    background: #FAFAFA;
     padding-right: 1rem;
     padding-left: 1rem;
   }
@@ -415,15 +407,14 @@ html, body {
 @media screen and (min-width: 768px) {
   .photo {
     background: #FAFAFA;
-    padding-right: 2.25rem;
     padding-left: 2.25rem;
     padding-bottom: 2.25rem;
   }
   .photo-title {
-    padding-top: 3rem;
-    padding-bottom: 2.25rem;
     margin: 0;
     font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 700;
   }
   .photo-imgs {
     display: flex;
@@ -444,7 +435,6 @@ html, body {
 @media screen and (min-width: 1280px) {
   .photo {
     background: #FAFAFA;
-    padding-right: 2.25rem;
     padding-left: 2.25rem;
     padding-bottom: 2.25rem;
   }
@@ -505,7 +495,7 @@ html, body {
   .shows-top {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
   }
   .shows-top__right {
     width: 100%;
@@ -607,47 +597,71 @@ html, body {
   }
 }
 @media screen and (min-width: 768px) {
-  .shows {
-    padding: 2.25rem;
-    padding-right: 4rem;
-  }
   .shows-title {
     font-size: 2.25rem;
   }
   .shows-top__left {
-    padding-left: 2.25rem;
-    width: 10%;
+    width: 7%;
+    transform: translateY(3rem);
   }
   .shows-bottom__container {
     justify-content: flex-end;
   }
   .shows-comment__right__btn {
-    width: 25%;
+    width: 9.375rem;
     min-width: 0;
+    height: 2.5rem;
   }
   .shows-top__container__name__text-box {
     height: 3rem;
   }
+  .shows-container__comment-box {
+    padding-bottom: 5rem;
+  }
   .shows-comments__name {
-    width: 63%;
-    padding-left: 3rem;
+    width: 70%;
+    padding-left: 3.7rem;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.375rem;
   }
   .shows-comments__text {
     margin: 0;
     padding-left: 6.7rem;
-    line-height: 1.75rem;
+    width: 80%;
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.375rem;
   }
   .shows-comments__img {
-    vertical-align: baseline;
+    vertical-align: flex-start;
+    transform: translateX(3rem);
+    width: 3rem;
+    height: 3rem;
+    margin-top: 1rem;
+  }
+  .shows-top {
+    padding-top: 1rem;
   }
   .shows-hr {
-    width: 80%;
+    width: 89%;
     margin-bottom: 2.25rem;
-    margin-top: -0.5rem;
   }
   .shows-comments__line {
-    width: 80%;
+    width: 82%;
     padding-left: 3rem;
+  }
+  .shows-top__right {
+    width: 80%;
+  }
+  .shows-container__left__img {
+    width: 3rem;
+    height: 3rem;
+  }
+  .shows-comments__date {
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.375rem;
   }
 }
 @media screen and (min-width: 1280px) {
