--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -36,16 +36,22 @@ html, body {
     margin: 0;
     padding: 0;
 
-    @include tablet{
-        min-width: 768px;
-    }
 }
 
 .header {
-    background: $bandsite-Black;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+    @include mobile{
+        background: $bandsite-Black;
+        flex-direction: column;
+        position: relative;
+        &__logo {
+            background-image: url('../assets/Logo/Logo-bandsite.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+            align-items: center;
+            max-height: 20px;
+            padding: 1.5rem;
+        }
+    }
    
     @include tablet {
         flex-direction: row;
@@ -53,25 +59,21 @@ html, body {
         align-items: center;
         padding: 2.25rem;
         &__logo{
-            width: 20%;
+            width: 100%;
+            background-position: left;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
         }
+        
+
     }
-    @include desktop() {
+    @include desktop {
         flex-direction: row;
         justify-content: flex-start;
         align-items: center;
         padding: 2.25rem;
     }
-    &__logo {
-        background-image: url('../assets/Logo/Logo-bandsite.svg');
-        background-repeat: no-repeat;
-        background-position: center;
-        align-items: center;
-        max-height: 20px;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        margin: 0.5rem;
-    }
+
 }
 
 .nav {
@@ -85,16 +87,17 @@ html, body {
             border-bottom: -1.1875rem solid ($white);
             color: $white;
         }
-    }
-        &__link {
-        text-decoration: none;
-        color: $silver;
-        transition: background-color 0.25s;
-        display: flex;
-        width: 50%;
-        justify-content: space-evenly;
-        transition: all 0.5s;
     
+        &__link {
+            text-decoration: none;
+            color: $silver;
+            transition: background-color 0.25s;
+            display: flex;
+            width: 50%;
+            justify-content: space-evenly;
+            transition: all 0.5s;
+        }
+
         @include tablet {
             font-size: 1.5rem;
           
@@ -102,7 +105,7 @@ html, body {
         &:hover{
             color: $white;
         }
-    }
+    
         &__button {
             padding: 0.625rem;
             text-decoration: none;
@@ -113,9 +116,12 @@ html, body {
             justify-content: space-evenly;
             transition: all 0.5s;
             background-color: $bandsite-Black;
-           
+            border: none;
+            
             @include tablet {
-                font-size: 1.5rem;
+                font-size: 0.875rem;
+                line-height: 2rem;
+                font-weight: 600;
             
             }
             &:hover{
@@ -124,41 +130,46 @@ html, body {
                 color: $white;
                
             } 
+        }
+        
     }
+
  
     @include tablet {
-        justify-content: flex-end;
-        position:absolute;
-        top: 0;
-        height: 100%;
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        margin-left: 2.25rem;
+            justify-content: flex-end;
+            position:absolute;
+            top: 0;
+            height: 100%;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+            transform: translateX(10rem);
        
         &:hover{
             border-bottom: -1.1875rem solid ($white);
             color: $white;
         }
-    }
+    
         &__link {
-        text-decoration: none;
-        color: $silver;
-        transition: background-color 0.25s;
-        display: flex;
-        width: 50%;
-        justify-content: space-evenly;
-        transition: all 0.5s;
-        
-        @include tablet {
-            font-size: 1.5rem;
+            text-decoration: none;
+            color: $silver;
+            transition: background-color 0.25s;
+            display: flex;
+            width: 50%;
+            justify-content: space-evenly;
+            transition: all 0.5s;
+
+            font-size: 0.75rem;
+            font-weight: 700;
+            line-height: 1.25rem;
         }
+
         &:hover{
             color: $white;
         }
-    }
+    
         &__button {
-            padding: 0.625rem;
+            padding: 2rem;
             text-decoration: none;
             color: $silver;
             transition: background-color 0.25s;
@@ -169,14 +180,17 @@ html, body {
             background-color: $bandsite-Black;
             align-items: center;
             border: none;
-        } 
-            @include tablet {
-                font-size: 1.5rem;
-            }
+        
             &:hover{
                 background-color: darken($bandsite-DarkBlack, 5%);
                 color: $white;
             }
+        }
+        
+
+    }
+
+
     @include desktop {
        margin-left: 2.25rem;
     }
@@ -191,16 +205,22 @@ html, body {
         &__title {
             color: $white;
             position: absolute;
+            font-weight: 400;
+            font-size: 1.5rem;
+            line-height: 2rem;
+            font-weight: 400;
+            z-index: 1; 
             padding-left: 1rem;
         }
     }
     @include tablet {
-        min-width: 768px;
-        font-size: 3.75rem;
-        line-height: 4.25rem;
+       
         &__title{
         padding-left: 2.25rem;
-        margin: 0;
+        font-size: 3.75rem;
+        line-height: 4.25rem;
+        font-weight: 700;
+
         }
     }
     @include desktop {
@@ -209,15 +229,6 @@ html, body {
         &__title{
         margin: 0;
         }
-    }
-    &__title {
-    color: $white;
-    position: absolute;
-    font-weight: 400;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    font-weight: 700;
-    z-index: 1; 
     }
     &-img-overlay{
     position: absolute;
@@ -243,8 +254,7 @@ html, body {
     @include mobile {
         &__header{
             align-items: center;
-            padding-bottom: 1rem;
-            padding-top: 1.5rem;
+            padding-top: 1rem;
         }
         &-quote__container{
             display: flex;
@@ -282,11 +292,11 @@ html, body {
         padding-left: 2.25rem;
         padding-bottom: 2.25rem;
         &__header{
-            padding-top: 3rem;
-            padding-bottom: 2.25rem;
-            font-size: 2.25rem;
             justify-content: flex-start;
-            padding-right: 2.25rem;
+
+            font-size: 2.25rem;
+            line-height: 2.75rem;
+            font-weight: 700;
         }
         &-band{
             max-width: 75%;
@@ -304,31 +314,46 @@ html, body {
             display: flex;
             font-size: 0.875rem;
             line-height: 1.375rem;
+            font-weight: 400;
             flex-direction: row;    
         }
         &-quote__the-bees{
-            font-size: 1.5rem;
-            line-height: 2rem;
             padding-top: 2.25rem;
             padding-bottom: 2.25rem;
             margin: 0;       
+
+                  
+            font-size: 1.5rem;
+            line-height: 2rem;
+            font-weight: 600;
         }
         &-container{
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding-right: 2.25rem
         }
         &-quote__text{
             margin: 0;
             padding-top: 2.25rem;
+
+            font-size: 1.5rem;
+            line-height: 2rem;
+            font-weight: 600;
         }
         &-quote__container__text{
             padding: 0;
             padding-right: 2.25rem;
+
+            
         }
         &-quote__container__text1{
             padding: 0;
+        }
+        &-quote__author{
+            
+            font-size: 1.5rem;
+            line-height: 2rem;
+            font-weight: 600;
         }
     }
 
@@ -386,9 +411,10 @@ html, body {
             padding: 0;
         }
     }
-    &__header{
-    margin: 0;
-    }
+    // &__header{
+    // margin: 0;
+
+    // }
     &-quote__author{
         margin: 0;
         padding-top: 1rem;
@@ -407,11 +433,9 @@ html, body {
 }
 
 .photo {
-    background: $Alabaster;
-    padding-right: 1rem;
-    padding-left: 1rem;
-
+ 
     @include mobile{
+    background: $Alabaster;
     padding-right: 1rem;
     padding-left: 1rem;
         &-title {
@@ -424,14 +448,14 @@ html, body {
 
     @include tablet{ 
     background: $Alabaster;
-    padding-right: 2.25rem;
     padding-left: 2.25rem;
     padding-bottom: 2.25rem;
         &-title {
-            padding-top: 3rem;
-            padding-bottom: 2.25rem;
             margin: 0;
+
             font-size: 2.25rem;
+            line-height: 2.75rem;
+            font-weight: 700;
         }
         &-imgs {
             display: flex;
@@ -452,7 +476,6 @@ html, body {
 
     @include desktop { 
         background: $Alabaster;
-        padding-right: 2.25rem;
         padding-left: 2.25rem;
         padding-bottom: 2.25rem;
             &-title {
@@ -510,7 +533,7 @@ html, body {
         &-top{
             display: flex;
             align-items: flex-start;
-            justify-content: flex-start;
+            justify-content: center;
         }
         &-top__right{
             width: 100%;
@@ -617,56 +640,76 @@ html, body {
             margin-bottom: 1rem;
             margin-top: 1rem;
         }
-        
-      
-        
-           
-    
     }
 
     @include tablet {
-        padding: 2.25rem;
-        padding-right: 4rem;
-
         &-title{
             font-size: 2.25rem;
         }
         &-top__left{
-            padding-left: 2.25rem;
-            width: 10%;
+            width: 7%;
+            transform: translateY(3rem);
         }
         &-bottom__container{
             justify-content: flex-end;
         }
         &-comment__right__btn{
-            width: 25%;
+            width: 9.375rem;
             min-width: 0; 
+            height: 2.5rem;
         }
         &-top__container__name__text-box{
             height: 3rem;
         }
+        &-container__comment-box{
+            padding-bottom: 5rem;
+        }
         &-comments__name{
-            width: 63%;
-            padding-left: 3rem;
+            width: 70%;
+            padding-left: 3.7rem;
+
+            font-size: 0.875rem;
+            font-weight: 400;
+            line-height: 1.375rem;
         }
         &-comments__text{
             margin: 0;
             padding-left: 6.7rem;
-            line-height: 1.75rem;
+            width: 80%;
+         
+            font-size: 0.875rem;
+            font-weight: 400;
+            line-height: 1.375rem;
         }
         &-comments__img{
-           vertical-align: baseline;
-          
+            vertical-align: flex-start;
+            transform: translateX(3rem);
+            width: 3rem;
+            height: 3rem;
+            margin-top: 1rem;
+        }
+        &-top{
+            padding-top: 1rem;
         }
         &-hr{
-            width: 80%;
+            width: 89%;
             margin-bottom: 2.25rem;
-            margin-top: -0.5rem;
-       
         }
         &-comments__line{
-            width: 80%;
+            width: 82%;
             padding-left: 3rem;
+        }
+        &-top__right{
+            width: 80%;
+        }
+        &-container__left__img{
+            width: 3rem;
+            height: 3rem;
+        }
+        &-comments__date{
+            font-size: 0.875rem;
+            font-weight: 400;
+            line-height: 1.375rem;
         }
      
     }
