--- a/styles/bio.css
+++ b/styles/bio.css
@@ -415,6 +415,8 @@ html, body {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 700;
+    padding-bottom: 2.25rem;
+    padding-top: 3rem;
   }
   .photo-imgs {
     display: flex;
@@ -597,6 +599,11 @@ html, body {
   }
 }
 @media screen and (min-width: 768px) {
+  .shows {
+    padding-right: 2.25rem;
+    padding-left: 2.25rem;
+    padding-top: 3rem;
+  }
   .shows-title {
     font-size: 2.25rem;
   }
