--- a/styles/bio.css
+++ b/styles/bio.css
@@ -140,8 +140,8 @@ html, body {
     width: 50%;
     justify-content: space-evenly;
     transition: all 0.5s;
-    font-size: 0.75rem;
-    font-weight: 700;
+    font-size: 1rem;
+    font-weight: bold;
     line-height: 1.25rem;
   }
   .nav:hover {
@@ -167,7 +167,50 @@ html, body {
 }
 @media screen and (min-width: 1280px) {
   .nav {
-    margin-left: 2.25rem;
+    justify-content: flex-end;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    transform: translateX(10rem);
+  }
+  .nav:hover {
+    border-bottom: -1.1875rem solid #FFFFFF;
+    color: #FFFFFF;
+  }
+  .nav__link {
+    text-decoration: none;
+    color: #AFAFAF;
+    transition: background-color 0.25s;
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
+    transition: all 0.5s;
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 1.25rem;
+  }
+  .nav:hover {
+    color: #FFFFFF;
+  }
+  .nav__button {
+    padding: 2rem;
+    text-decoration: none;
+    color: #AFAFAF;
+    transition: background-color 0.25s;
+    display: flex;
+    width: 50%;
+    justify-content: space-evenly;
+    transition: all 0.5s;
+    background-color: #323232;
+    align-items: center;
+    border: none;
+  }
+  .nav__button:hover {
+    background-color: black;
+    color: #FFFFFF;
   }
 }
 
@@ -197,12 +240,10 @@ html, body {
   }
 }
 @media screen and (min-width: 1280px) {
-  .hero {
-    font-size: 3.75rem;
-    line-height: 4.25rem;
-  }
   .hero__title {
     margin: 0;
+    font-size: 3.75rem;
+    line-height: 4.25rem;
   }
 }
 .hero-img-overlay {
@@ -268,6 +309,9 @@ html, body {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 700;
+    margin: 0;
+    padding-bottom: 2.25rem;
+    padding-top: 3rem;
   }
   .about-band {
     max-width: 75%;
@@ -363,18 +407,27 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-right: 2.25rem;
   }
   .about-quote__text {
     margin: 0;
     padding-top: 2.25rem;
+    width: 75%;
   }
   .about-quote__container__text {
     padding: 0;
     padding-right: 2.25rem;
+    width: 75%;
   }
   .about-quote__container__text1 {
     padding: 0;
+    width: 75%;
+  }
+  .about-quote__author {
+    margin: 0;
+    padding-top: 1rem;
+    font-size: 1.25rem;
+    line-height: 2rem;
+    font-weight: 600;
   }
 }
 .about-quote__author {
