--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -72,7 +72,9 @@ html, body {
         justify-content: flex-start;
         align-items: center;
         padding: 2.25rem;
+
     }
+    
 
 }
 
@@ -159,8 +161,8 @@ html, body {
             justify-content: space-evenly;
             transition: all 0.5s;
 
-            font-size: 0.75rem;
-            font-weight: 700;
+            font-size: 1rem;
+            font-weight: bold;
             line-height: 1.25rem;
         }
 
@@ -192,8 +194,59 @@ html, body {
 
 
     @include desktop {
-       margin-left: 2.25rem;
+        justify-content: flex-end;
+        position:absolute;
+        top: 0;
+        height: 100%;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        transform: translateX(10rem);
+   
+    &:hover{
+        border-bottom: -1.1875rem solid ($white);
+        color: $white;
     }
+
+    &__link {
+        text-decoration: none;
+        color: $silver;
+        transition: background-color 0.25s;
+        display: flex;
+        width: 50%;
+        justify-content: space-evenly;
+        transition: all 0.5s;
+
+        font-size: 1rem;
+        font-weight: bold;
+        line-height: 1.25rem;
+    }
+
+    &:hover{
+        color: $white;
+    }
+
+    &__button {
+        padding: 2rem;
+        text-decoration: none;
+        color: $silver;
+        transition: background-color 0.25s;
+        display: flex;
+        width: 50%;
+        justify-content: space-evenly;
+        transition: all 0.5s;
+        background-color: $bandsite-Black;
+        align-items: center;
+        border: none;
+    
+        &:hover{
+            background-color: darken($bandsite-DarkBlack, 5%);
+            color: $white;
+        }
+    }
+    
+
+}
 } 
 
 .hero {
@@ -224,10 +277,10 @@ html, body {
         }
     }
     @include desktop {
-        font-size: 3.75rem;
-        line-height: 4.25rem;
         &__title{
         margin: 0;
+        font-size: 3.75rem;
+        line-height: 4.25rem;
         }
     }
     &-img-overlay{
@@ -297,6 +350,9 @@ html, body {
             font-size: 2.25rem;
             line-height: 2.75rem;
             font-weight: 700;
+            margin: 0;
+            padding-bottom: 2.25rem;
+            padding-top: 3rem;
         }
         &-band{
             max-width: 75%;
@@ -384,6 +440,7 @@ html, body {
             display: flex;
             font-size: 0.875rem;
             line-height: 1.375rem;
+        
             flex-direction: row;    
         }
         &-quote__the-bees{
@@ -397,24 +454,32 @@ html, body {
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding-right: 2.25rem
         }
         &-quote__text{
             margin: 0;
             padding-top: 2.25rem;
+            width: 75%;
         }
         &-quote__container__text{
             padding: 0;
             padding-right: 2.25rem;
+            
+            width: 75%;
         }
         &-quote__container__text1{
             padding: 0;
+            
+            width: 75%;
         }
-    }
-    // &__header{
-    // margin: 0;
+        &-quote__author{
+            margin: 0;
+            padding-top: 1rem;
+            font-size: 1.25rem;
+            line-height: 2rem;
+            font-weight: 600;
+        } 
 
-    // }
+    }
     &-quote__author{
         margin: 0;
         padding-top: 1rem;
